[package]
name = "portman"
version = "0.4.0"
authors = ["Caleb Cox"]
edition = "2021"
description = "Local port allocation manager"
readme = "README.md"
repository = "https://github.com/canac/portman"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.2.4", features = ["derive"] }
directories = "5.0.0"
entrait = { version = "0.4.6", features = ["unimock"] }
lazy_static = "1.4.0"
rand = "0.8.5"
regex = { version = "1.5.5", default-features = false, features = ["perf", "std"] }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.7.3"
unimock = "0.3.14"

[build-dependencies]
clap = { version = "4.2.4", features = ["derive"] }
clap_complete = "4.2.1"
clap_complete_fig = "4.2.0"
clap_mangen = "0.2.10"
