[package]
name = "portman"
version = "0.6.4"
authors = ["Caleb Cox"]
edition = "2024"
description = "Local port allocation manager"
readme = "README.md"
repository = "https://github.com/canac/portman"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
directories = "5.0.1"
entrait = { version = "0.7.0", features = ["unimock"] }
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
toml = "0.8.8"
unimock = "0.6.3"

[build-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.9"
clap_mangen = "0.2.18"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
