[package]
name = "portman"
version = "0.6.5"
authors = ["Caleb Cox"]
edition = "2024"
description = "Local port allocation manager"
readme = "README.md"
repository = "https://github.com/canac/portman"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
entrait = { version = "0.7.1", features = ["unimock"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.6"
unimock = "0.6.8"

[build-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.31"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
